main/css/layout.css
/* ... */
ul.slimmenu {
	padding-top:10px;
	padding-right:10px;
	text-align:right;
	margin-top:23px;
	margin-bottom:20px;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}
ul.slimmenu li {
    position: relative;
    display: inline-block;
	background:url('../images/line.png') 0 14px no-repeat;
	background-size:15px 10px;
	padding-left:20px;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}
ul.slimmenu > li {}
ul.slimmenu > li:first-child { border-left: 0 }
ul.slimmenu > li:last-child { margin-right: 0 }
ul.slimmenu li a {
    display: block;
    color: #fff;
    padding: 10px 0px;
	cursor:pointer;
    margin: 0px 12px;
	font-family: 'Hind Siliguri', sans-serif;
	font-weight:700;
	/* text-transform:uppercase; */
	letter-spacing:2px;
    border-bottom:1px solid rgba(0,0,0,0);
    font-size: 20px;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    transition: all 300ms linear;
}
ul.slimmenu li a:hover {
    text-decoration: none;
}
ul.slimmenu li {
}
ul.slimmenu li:first-child {
	background:none;
}

ul.slimmenu li .sub-collapser {
    position: absolute;
    right: 0;
    top: 0;
    width: 48px;
    height: 100%;
    z-index: 999;
    cursor: pointer;
}
ul.slimmenu li .sub-collapser:before {
	display:none;
}
ul.slimmenu li .sub-collapser > i {
	display:none;
}
ul.slimmenu li ul {
    margin: 0;
    list-style-type: none;
}
ul.slimmenu li ul a{
    font-size:10px;
}
ul.slimmenu li ul li:first-child {
	background:none; }
ul.slimmenu li ul li {
	background:none;
	padding-left:0; }
ul.slimmenu li > ul {
    display: none;
    position: absolute;
	text-align:left;
    left: 0;
    top: 100%;
    z-index: 999;
    width: 140%;
}
ul.slimmenu li > ul > li ul {
    display: none;
    position: absolute;
    left: 100%;
    top: 0;
    z-index: 999;
    width: 100%;
}
ul.slimmenu.collapsed {
	padding:0;
	margin:0;
}
ul.slimmenu.collapsed li {
    display: block;
    width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}
ul.slimmenu.collapsed li a {
    display: block;
    border-bottom: 1px solid rgba(0, 0, 0, 0);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box
}
ul.slimmenu.collapsed li .sub-collapser {
    height: 40px;
}
ul.slimmenu.collapsed li > ul {
    display: none;
    position: static;
}

/* #Primary
================================================== */
.hide {
  display: none;
}

.section{
  position:relative;
	width:100%;
}
.full-height{
	height:100vh;
}
.padding-top-bottom{
	padding-top:120px;
	padding-bottom:120px;
}
.padding-top{
	padding-top:120px;
}
.padding-bottom{
	padding-bottom:120px;
}
.padding-top-bottom-small{
	padding-top:70px;
	padding-bottom:70px;
}
.padding-top-bottom-mini{
	padding-top:40px;
	padding-bottom:40px;
}
.padding-top-small{
	padding-top:70px;
}
.padding-top-mini{
	padding-top:40px;
}
.padding-bottom-small{
	padding-bottom:70px;
}
.padding-bottom-mini{
	padding-bottom:40px;
}
.back-dark{
	background-color:#212121;
}
.back-dark3{
	background-color:#303030;
}
.back-dark2{
	background-color:#181818;
}
.back-dark1{
	background-color:#060606;
}
.back-black{
	background-color:#000000;
}
.back-white{
	background-color:#ffffff;
}
.back-gray{
	background-color:#f9f9f9;
}
.full-img img {
	width:100%;
	display:block;
}
.over-hidden {
	overflow:hidden;
}

.title-text {
  position:relative;
	width:100%;
	padding-bottom:50px;
}
.title-text.left p{
	position:relative;
	text-align:left;
	font-family: 'Hind Siliguri', sans-serif;
	font-weight:500;
	font-size: 13px;
	line-height: 16px;
	letter-spacing:1px;
	color:#fff;
}
.title-text.left h3{
	text-align:left;
	padding-top:40px;
	width:100%;
	max-width:580px;
	color:#dbdbdb;
}
.title-text.left p span{
	position:relative;
	padding-left:80px;
}
.title-text.left p span:before {
	content:'';
	position:absolute;
	width:40px;
	height:1px;
	top:9px;
	left:18px;
	background-color:#f9f9f9;
}
.main-color {
  color:#D2A56E;
}
.sub-title {
  font-size: 22px;
  line-height: 33px;
  font-weight: 300;
  color: #fff;
}
.bio-title {
  text-align: left;
  font-size: 50px;
  font-weight: 300;
  line-height: 62px;
}

.bio-content {
  color: #717071;
  font-size: 22px;
  line-height: 33px;
  font-weight: 300;
  text-align: justify;
}

.bio-content a {
  color: #4b56c1;
}

.bio-content a:hover, a:focus {
  color: #e74c3c;
}

/* Grid
================================================== */
#grid img {
  display: block;
  float: left;
  margin: 0;
}

.grid-photo {
  display: inline-block;
  vertical-align: top;
}

/* #Home
================================================== */

#home {
  background: url('../images/home-landing.jpg') no-repeat;
  background-size: cover;
}

#home button {
	/* background: #fff; */
	/* color:#D2A56E;; */
	background: #8a8a8a;
	color:#fff;;
	font-size:13px;
  font-weight: 500;
	padding: 13px 25px;
	max-width:150px;
}

#home button:hover {
	color:#fff;
}

.home-carousel-wrap{
	position:relative;
	width:100%;
	height:100vh;
	overflow:hidden;
	z-index:2;
}
#sync1 .item {
	position: relative;
  width:100%;
  display: block;
	height:100vh;
  background-size:cover;
	background-position:center center;
}
#sync1 .item.background-home-image-1 {
	background-image:url('../images/home-1.jpg');
}
#sync1 .item.background-home-image-2 {
	background-image:url('../images/home-2.jpg');
}
#sync1 .item.background-home-image-3 {
	background-image:url('../images/home-3.jpg');
}

#sync2 {
	position:absolute;
	width:42px;
	top:50%;
	margin-top:120px;
	left:50%;
	margin-left:-21px;
}
/* ... */

